# Video-Curation-Sample-DEV

./: CMakeLists.txt  README.md  start_app.sh  start_streaming.sh  stop_app.sh  stop_streaming.sh
deployment/certificate/: CMakeLists.txt  Dockerfile  self-sign.sh
deployment/docker-swarm/: .gitignore  CMakeLists.txt  build.sh  docker-compose.yml.m4  docker-compose_stream.yml.m4  frontend.m4  start.sh  stop.sh  stream.m4  vdms.m4  video.m4  video_stream.m4
deployment/kubernetes/: build.sh  frontend.yaml.m4  ingest.yaml.m4  kafka.yaml.m4  start.sh  stop.sh  vdms.yaml.m4  video.yaml.m4  video_stream.yaml.m4
doc/: cmake.md
frontend/: Dockerfile  nginx.conf  search.py  setting.py
frontend/html/js/: home.js  playback.js
ingest/: Dockerfile  ingest.py  zkstate.py
ingest/gstreamer_gva/metaData_extract/: SConscript
ingest/gstreamer_gva/metaData_extract/src/: metaData_extract.cpp
ingest/vdms_converter/: SConstruct
script/: build.sh  deployment.cmake  mk-dist.sh  service.cmake  shell.sh
stream/: CMakeLists.txt  Dockerfile  build.sh  manage.sh  nginx.conf  shell.sh
video/: Dockerfile  build.sh  download.sh  manage.sh  segment.py  watch_and_notify.py  watch_and_send2vdms.py
video/remote_function/functions/: framesofinterest.py
